// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense 
    totalling 
    $0.24
  </h1>
</div>
`;

exports[`should correctly render expensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     expense 
    totalling 
    $212,341.24
  </h1>
</div>
`;
